Refactored createConfetti into initializeAsteroids
Removed references to "confetti" and generally cleaned things up in that function. Will do others later.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
      Jack Jensen
 
 		 Asteroid Miner 2k50
+		 2014 - 2018
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 	<head>
@@ -10,13 +11,12 @@
 		<script src="AsteroidMiner2k50.js" type="text/javascript"></script>
 
 		<link rel="stylesheet" type="text/css" href="AsteroidMiner2k50.css"/>
-		<title>ASTEROID MINER 2K50</title>
+		<title>Asteroid Miner 2k50</title>
 	</head>
 	<body>
 		<div id="asteroids"></div>
 
-
-		<div id="checkitout">
+		<div id="interface_container">
 			<input type="button" value="Display Sidebar" onclick="displaySidebar();" id="displaySidebar">
 			</input>
 			<div class="name">
